--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "clipyai",
-  "title": "ClipyAI",
+  "title": "Clipyai",
   "description": "AI-powered clipboard enhancement for productivity",
   "icon": "clipyai-icon.png",
   "author": "aryamaan_jain",
@@ -9,7 +9,7 @@
   "commands": [
     {
       "name": "clipyai",
-      "title": "clipyai",
+      "title": "Clipyai",
       "description": "AI-powered clipboard enhancement for productivity",
       "mode": "view"
     }
